--- a/express-web/src/package.json
+++ b/express-web/src/package.json
@@ -1,20 +1,14 @@
 {
-  "name": "app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@grpc/grpc-js": "^1.3.7",
-    "@opentelemetry/auto-instrumentations-node": "^0.25.0",
-    "@opentelemetry/exporter-collector-grpc": "^0.24.0",
-    "@opentelemetry/resources": "^0.24.0",
-    "@opentelemetry/sdk-node": "^0.24.0",
-    "@opentelemetry/semantic-conventions": "^0.24.0",
-    "express": "^4.17.1"
+    "@opentelemetry/api": "^1.4.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.36.2",
+    "@opentelemetry/exporter-collector": "^0.25.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.35.1",
+    "@opentelemetry/instrumentation": "^0.35.1",
+    "@opentelemetry/resources": "^1.9.1",
+    "@opentelemetry/sdk-node": "^0.35.1",
+    "@opentelemetry/semantic-conventions": "^1.9.1",
+    "@opentelemetry/tracing": "^0.24.0",
+    "express": "^4.18.2"
   }
 }
