--- a/express-web/src/package.json
+++ b/express-web/src/package.json
@@ -1,12 +1,18 @@
 {
   "dependencies": {
+    "@grpc/grpc-js": "^1.8.8",
     "@opentelemetry/api": "^1.4.0",
     "@opentelemetry/auto-instrumentations-node": "^0.36.2",
     "@opentelemetry/exporter-collector": "^0.25.0",
+    "@opentelemetry/exporter-collector-grpc": "^0.25.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.35.1",
     "@opentelemetry/instrumentation": "^0.35.1",
+    "@opentelemetry/instrumentation-express": "^0.32.1",
+    "@opentelemetry/instrumentation-http": "^0.35.1",
+    "@opentelemetry/node": "^0.24.0",
     "@opentelemetry/resources": "^1.9.1",
     "@opentelemetry/sdk-node": "^0.35.1",
+    "@opentelemetry/sdk-trace-node": "^1.9.1",
     "@opentelemetry/semantic-conventions": "^1.9.1",
     "@opentelemetry/tracing": "^0.24.0",
     "express": "^4.18.2"
