--- a/data-prepper/pipelines.yaml
+++ b/data-prepper/pipelines.yaml
@@ -28,6 +28,7 @@ service-map-pipeline:
       name: "entry-pipeline"
   processor:
     - service_map_stateful:
+        window_duration: 180 
   sink:
     - opensearch:
         hosts: ["https://node-0.example.com:9200"]
