--- a/opentelemetry-collector/otel-collector-config.yml
+++ b/opentelemetry-collector/otel-collector-config.yml
@@ -11,9 +11,14 @@ exporters:
       insecure: true
       insecure_skip_verify: true
   logging:
+  kafka:
+    brokers:
+      - kafka:9092
+    topic: apm
+    protocol_version: 2.8.0
 
 service:
   pipelines:
     traces:
       receivers: [otlp]
-      exporters: [logging, otlp/2]
+      exporters: [kafka]
